--- a/app/views/layouts/about.html.erb
+++ b/app/views/layouts/about.html.erb
@@ -17,9 +17,12 @@
 	</div>
 	<div id="head-navigation">
 		<ul>
-			<li id="nav-extractor"><%= link_to 'home','home' %></li>
-			<li id="nav-statistic"><%= link_to 'statistic','statistic' %></li>
-			<li id="nav-about-current"><%= link_to 'about','about' %></li>
+			<li id="nav-extractor"><%= link_to 'online extractor', :controller => 'home'%></li>
+			<li id="nav-offlineextractor"><%= link_to 'offline', :controller => 'home', :action => 'offline' %></li>
+			<li id="nav-products"><%= link_to 'products','products' %></li>
+			<li id="nav-rules"><%= link_to 'rules','rules' %></li>
+			<li id="nav-statistic"><%= link_to 'statistics','statistics' %></li>
+			<li id="nav-about-current"><%= link_to 'about', :controller => 'about' %></li>
 		</ul>		
 	</div>
 	<div id="bodier">
