--- a/app/views/layouts/rules.html.erb
+++ b/app/views/layouts/rules.html.erb
@@ -1,17 +1,37 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>Rules: <%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold' %>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
+<meta name="author" content="andrisetiawan" />
+<meta name="copyright" content="2009 by andrisetiawan" />
+<meta name="description" content="description" />
+<meta name="keywords" content="keywords" />
+<meta name="robots" content="all" />
+<title>Home: <%= controller.action_name %></title>
+  <%= stylesheet_link_tag 'reset','text','style' %>
 </head>
 <body>
-
-<p style="color: green"><%= flash[:notice] %></p>
-
-<%= yield  %>
+<div class="container">
+	<div id="header">	
+	</div>
+	<div id="head-navigation">
+		<ul>
+			<li id="nav-extractor"><%= link_to 'online extractor', :controller => 'home'%></li>
+			<li id="nav-offlineextractor"><%= link_to 'offline', :controller => 'home', :action => 'offline' %></li>
+			<li id="nav-products"><%= link_to 'products','products' %></li>
+			<li id="nav-rules-current"><%= link_to 'rules','rules' %></li>
+			<li id="nav-statistic"><%= link_to 'statistics','statistics' %></li>
+			<li id="nav-about"><%= link_to 'about', :controller => 'about' %></li>
+		</ul>		
+	</div>
+	<div id="bodier">
+		<%= yield  %>
+	</div>
+	<div id="footer">
+		<p><br />Copyright 2009 &copy; <a href="http://andrisetiawan.info/" title="andrisetiawan.info">andrisetiawan</a></p>
+	</div>
+</div>
 
 </body>
 </html>
